Fix z-index issue

--- a/components/Chat/Chatroom.module.scss
+++ b/components/Chat/Chatroom.module.scss
@@ -103,7 +103,7 @@
   }
 
   &__makeRoom {
-    z-index: 11;
+    z-index: 10;
   }
 
   &__usersButton {
